# Financial-RAG

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  main.py  pyproject.toml  run.sh  todo.md
api/: main.py
eval/: eval_questions.json  measure_cache_threshold.py  run_eval.py
src/: cache.py  ingest.py  limiter.py  retrieve.py  settings.py
src/agents/: abstain_agent.py  generate_output_agent.py  rerank_agent.py  retrieve_agent.py
src/client_llm/: base.py  factory_llm.py  openai_client.py
src/graph/: agent_graph.py  graph_service.py  state.py
src/helpers/: logger.py
src/nodes/: abstain_node.py  generate_node.py  rerank_node.py  retrieve_node.py
src/prompts/: generate_output_prompt.py
src/services/: generate.py  ingest.py  retrieve.py
tests/: test_abstain_agent.py  test_agent_graph.py  test_cache.py  test_client_llm.py  test_graph_service.py  test_limiter.py
