[project]
name = "financial-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.12",
    "chromadb>=1.5.9",
    "fastapi>=0.138.1",
    "langchain>=1.3.11",
    "lxml>=5.0",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-openai>=1.3.3",
    "pypdf>=6.14.2",
    "ragas>=0.4.3",
    "sentence-transformers>=5.6.0",
    "slowapi>=0.1.10",
    "streamlit>=1.58.0",
    "torch>=2.12.1",
    "uvicorn>=0.49.0",
    "langchain-text-splitters>=1.1.2",
]
