[project]
name = "financial-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.12",
    "chromadb>=1.5.9",
    "fastapi>=0.138.1",
    "langchain>=1.3.11",
    "lxml>=5.0",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-openai>=1.3.3",
    "pypdf>=6.14.2",
    "ragas>=0.4.3",
    "sentence-transformers>=5.6.0",
    "slowapi>=0.1.10",
    "streamlit>=1.58.0",
    "torch>=2.12.1",
    "uvicorn>=0.49.0",
    "langchain-text-splitters>=1.1.2",
    "python-dotenv>=1.2.2",
    "langgraph>=1.2.6",
    "langchain-google-vertexai>=3.2.4",
    "deepeval>=4.0.7",
]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "ruff>=0.9",
]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
# E pycodestyle, F pyflakes, I isort, UP pyupgrade, B bugbear, D pydocstyle
select = ["E", "F", "I", "UP", "B", "D"]
# D104 (paquete __init__) y D107 (__init__ method) fuera: no se exige docstring ahí
ignore = ["D104", "D107"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
# All built-in flags — no plugins. Applied to every `uv run pytest`.
addopts = "-v -ra --tb=short --strict-markers --durations=5 --color=yes"
testpaths = ["tests"]
